--- a/C482/C482/src/c482/PartScreen.fxml
+++ b/C482/C482/src/c482/PartScreen.fxml
@@ -115,7 +115,7 @@
                         <Insets left="125.0" />
                      </GridPane.margin>
                   </Label>
-                  <Label fx:id="sourceTitle" text="Source" GridPane.rowIndex="5">
+                  <Label fx:id="sourceTitle" GridPane.rowIndex="5">
                      <GridPane.margin>
                         <Insets left="50.0" />
                      </GridPane.margin>
