--- a/C482/C482/src/view/AddPartScreen.fxml
+++ b/C482/C482/src/view/AddPartScreen.fxml
@@ -18,6 +18,14 @@
    <children>
       <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0">
          <children>
+            <Label maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="355.0" text="Inventory Management System" textFill="#3e48a4">
+               <font>
+                  <Font name="SansSerif Bold" size="24.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="40.0" left="10.0" />
+               </VBox.margin>
+            </Label>
             <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="45.0" prefWidth="480.0">
                <children>
                   <Label fx:id="partLabel" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="20.0" prefWidth="120.0" text="Add Part" textFill="#3e48a4">
@@ -65,7 +73,7 @@
                         <Insets left="50.0" />
                      </GridPane.margin>
                   </Label>
-                  <Label text="Inv" GridPane.rowIndex="2">
+                  <Label text="Inventory Level" GridPane.rowIndex="2">
                      <GridPane.margin>
                         <Insets left="50.0" />
                      </GridPane.margin>
@@ -90,7 +98,7 @@
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
                   </TextField>
-                  <TextField fx:id="invField" promptText="Inv" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                  <TextField fx:id="invField" promptText="Inventory Level" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
@@ -144,7 +152,7 @@
             </ButtonBar>
          </children>
          <padding>
-            <Insets top="80.0" />
+            <Insets top="40.0" />
          </padding>
       </VBox>
    </children>
