--- a/C482/C482/src/view/AddProductScreen.fxml
+++ b/C482/C482/src/view/AddProductScreen.fxml
@@ -86,27 +86,27 @@
                               <Insets left="10.0" right="10.0" />
                            </GridPane.margin>
                         </TextField>
-                        <TextField promptText="Name" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                        <TextField fx:id="productNameField" promptText="Name" GridPane.columnIndex="1" GridPane.rowIndex="1">
                            <GridPane.margin>
                               <Insets left="10.0" right="10.0" />
                            </GridPane.margin>
                         </TextField>
-                        <TextField maxWidth="-Infinity" minWidth="-Infinity" prefWidth="100.0" promptText="Inventory" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                        <TextField fx:id="invField" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="100.0" promptText="Inventory" GridPane.columnIndex="1" GridPane.rowIndex="2">
                            <GridPane.margin>
                               <Insets left="10.0" right="10.0" />
                            </GridPane.margin>
                         </TextField>
-                        <TextField maxWidth="-Infinity" minWidth="-Infinity" prefWidth="100.0" promptText="Price" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                        <TextField fx:id="priceField" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="100.0" promptText="Price" GridPane.columnIndex="1" GridPane.rowIndex="3">
                            <GridPane.margin>
                               <Insets left="10.0" right="10.0" />
                            </GridPane.margin>
                         </TextField>
-                        <TextField maxWidth="-Infinity" minWidth="-Infinity" prefWidth="100.0" promptText="Max" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                        <TextField fx:id="maxField" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="100.0" promptText="Max" GridPane.columnIndex="1" GridPane.rowIndex="4">
                            <GridPane.margin>
                               <Insets left="10.0" />
                            </GridPane.margin>
                         </TextField>
-                        <TextField maxWidth="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="100.0" promptText="Min" GridPane.columnIndex="2" GridPane.rowIndex="4">
+                        <TextField fx:id="minField" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="100.0" promptText="Min" GridPane.columnIndex="2" GridPane.rowIndex="4">
                            <GridPane.margin>
                               <Insets left="10.0" />
                            </GridPane.margin>
@@ -185,7 +185,7 @@
                   </ButtonBar>
                   <ButtonBar prefHeight="40.0" prefWidth="200.0">
                     <buttons>
-                        <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" text="Save" />
+                        <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#saveButtonPressed" prefHeight="25.0" prefWidth="100.0" text="Save" />
                         <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#cancelButtonPressed" prefHeight="25.0" prefWidth="100.0" text="Cancel" />
                     </buttons>
                      <padding>
