--- a/C482/C482/src/view/AddProductScreen.fxml
+++ b/C482/C482/src/view/AddProductScreen.fxml
@@ -81,7 +81,7 @@
                               <Insets left="50.0" />
                            </GridPane.margin>
                         </Label>
-                        <TextField editable="false" promptText="Auto Gen - Disabled" GridPane.columnIndex="1">
+                        <TextField disable="true" editable="false" promptText="Auto Gen - Disabled" GridPane.columnIndex="1">
                            <GridPane.margin>
                               <Insets left="10.0" right="10.0" />
                            </GridPane.margin>
