--- a/C482/C482/src/view/AddProductScreen.fxml
+++ b/C482/C482/src/view/AddProductScreen.fxml
@@ -158,7 +158,7 @@
                   </TableView>
                   <ButtonBar prefHeight="40.0" prefWidth="200.0">
                     <buttons>
-                      <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" text="Add" />
+                      <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#addButtonPressed" prefHeight="25.0" prefWidth="100.0" text="Add" />
                     </buttons>
                      <VBox.margin>
                         <Insets />
@@ -177,7 +177,7 @@
                   </TableView>
                   <ButtonBar prefHeight="40.0" prefWidth="200.0">
                     <buttons>
-                      <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" text="Delete" />
+                      <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#deleteButtonPressed" prefHeight="25.0" prefWidth="100.0" text="Delete" />
                     </buttons>
                      <padding>
                         <Insets right="100.0" />
