--- a/C482/C482/src/view/MainScreen.fxml
+++ b/C482/C482/src/view/MainScreen.fxml
@@ -42,7 +42,7 @@
                                     <Insets left="30.0" right="10.0" top="10.0" />
                                  </HBox.margin>
                               </Button>
-                              <TextField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="220.0">
+                              <TextField fx:id="partSearchQuery" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="220.0">
                                  <HBox.margin>
                                     <Insets left="15.0" right="10.0" top="10.0" />
                                  </HBox.margin>
@@ -116,7 +116,7 @@
                                     <Insets left="20.0" right="10.0" top="10.0" />
                                  </HBox.margin>
                               </Button>
-                              <TextField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="200.0">
+                              <TextField fx:id="productSearchQuery" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="200.0">
                                  <HBox.margin>
                                     <Insets left="15.0" right="10.0" top="10.0" />
                                  </HBox.margin>
