--- a/C482/C482/src/view/ModifyProductScreen.fxml
+++ b/C482/C482/src/view/ModifyProductScreen.fxml
@@ -133,12 +133,12 @@
                <children>
                   <HBox prefHeight="40.0" prefWidth="200.0">
                      <children>
-                        <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#searchButtonPressed" prefHeight="25.0" prefWidth="100.0" text="Search">
+                        <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#searchPartsButton" prefHeight="25.0" prefWidth="100.0" text="Search">
                            <HBox.margin>
                               <Insets left="105.0" right="10.0" />
                            </HBox.margin>
                         </Button>
-                        <TextField>
+                        <TextField fx:id="partSearchQuery">
                            <HBox.margin>
                               <Insets left="10.0" right="10.0" />
                            </HBox.margin>
