--- a/C482/C482/src/view/MainScreen.fxml
+++ b/C482/C482/src/view/MainScreen.fxml
@@ -42,7 +42,7 @@
                                     <Insets left="30.0" right="10.0" top="10.0" />
                                  </HBox.margin>
                               </Button>
-                              <TextField fx:id="partSearchQuery" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="220.0">
+                              <TextField fx:id="partSearchQuery" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="220.0" promptText="Enter Part ID:">
                                  <HBox.margin>
                                     <Insets left="15.0" right="10.0" top="10.0" />
                                  </HBox.margin>
@@ -87,16 +87,24 @@
                         <Insets left="10.0" right="10.0" />
                      </VBox.margin>
                   </VBox>
+                  <Label fx:id="exceptionMessage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="355.0" text="Error:" textFill="#f03737" visible="false">
+                     <font>
+                        <Font name="SansSerif Regular" size="16.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets left="50.0" top="30.0" />
+                     </VBox.margin>
+                  </Label>
                </children>
             </VBox>
             <VBox prefHeight="200.0" prefWidth="100.0">
                <children>
-                  <Label disable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="355.0" textFill="#3e48a4">
+                  <Label disable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="355.0">
                      <VBox.margin>
                         <Insets bottom="30.0" left="10.0" top="10.0" />
                      </VBox.margin>
                      <font>
-                        <Font name="SansSerif Bold" size="24.0" />
+                        <Font name="SansSerif Regular" size="16.0" />
                      </font>
                   </Label>
                   <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="480.0" style="-fx-border-style: solid; -fx-border-radius: 15; -fx-border-width: 2; -fx-border-color: #A9A9A9;">
@@ -116,7 +124,7 @@
                                     <Insets left="20.0" right="10.0" top="10.0" />
                                  </HBox.margin>
                               </Button>
-                              <TextField fx:id="productSearchQuery" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="200.0">
+                              <TextField fx:id="productSearchQuery" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="200.0" promptText="Enter Product ID:">
                                  <HBox.margin>
                                     <Insets left="15.0" right="10.0" top="10.0" />
                                  </HBox.margin>
