--- a/C482/C482/src/view/ModifyProductScreen.fxml
+++ b/C482/C482/src/view/ModifyProductScreen.fxml
@@ -121,6 +121,14 @@
                         <Insets bottom="10.0" />
                      </VBox.margin>
                   </GridPane>
+                  <Label fx:id="exceptionMessage" alignment="CENTER" contentDisplay="CENTER" text="Error:" textFill="#f03232" visible="false">
+                     <font>
+                        <Font name="SansSerif Regular" size="16.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets left="50.0" top="30.0" />
+                     </VBox.margin>
+                  </Label>
                </children>
                <HBox.margin>
                   <Insets />
